[package]
name = "lod"
version = "0.5.0"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.1"
toml = "0.8.8"

[dev-dependencies]
mockall = "0.11.4"

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.0.4", features = ["apple", "AppKit_NSApplication"] }
system_status_bar_macos = "0.2.0"

[patch.crates-io]
system_status_bar_macos = { git = "https://github.com/graemer957/system_status_bar_macos.git", branch = "task/rustfmt" }
