[package]
name = "lod"
version = "0.5.1"
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.1"
toml = "0.9.0"

[dev-dependencies]
mockall = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.1.0", features = ["apple", "AppKit_NSApplication"] }
system_status_bar_macos = "0.2.0"

[patch.crates-io]
system_status_bar_macos = { git = "https://github.com/graemer957/system_status_bar_macos.git", branch = "task/rustfmt" }
