[package]
name = "lod"
version = "0.5.3"
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.1"
toml = "1.0.0"

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSEvent", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSDate", "NSString"] }
system_status_bar_macos = "0.2"

[patch.crates-io]
system_status_bar_macos = { git = "https://github.com/graemer957/system_status_bar_macos.git", branch = "task/rustfmt" }
